--- a/uploadeXe/templates/reports.html
+++ b/uploadeXe/templates/reports.html
@@ -13,6 +13,7 @@
 			$('#lastactivity').puibutton();
 			$('#allclassattendance').puibutton();
 			$('#regidtincan').puibutton();
+			$('#attendanceexcel').puibutton();
                 }
           ); 
 </script>
@@ -29,7 +30,9 @@
 		<a href="/reports/durationreport_selection/"><button id="durationreport" type="button"style="width:200px;height:100px">Duration Report</button></a>
 		<a href="/reports/usage_report/"><button id="usagereport" type="button"style="width:200px;height:100px;">Usage Report</button></a>
 		<a href="/reports/lastactivity/"><button id="lastactivity" type="button"style="width:200px;height:100px;">Last Activity Report</button></a>
-		<a href="/reports/attendance_selection/"><button id="allclassattendance" type="button"style="width:200px;height:100px;">Attendance Report</button></a>
+		<a href="/reports/attendance_selection/"><button id="allclassattendance" type="button"style="width:200px;height:100px;">Attendance Report</button></a>		
+		<a href="/reports/attendance_excel_selection/"><button id="attendanceexcel" type="button" style="width:200px;height:100px;">Attendance Excel
+ Report</button></a>
 		<a href="/reports/registrations_report_tincanxml/"><button id="regidtincan" type="button" style="width:200px;height:100px;">Survey Report</button></a>
 		<!--<a href="/reports/responsereport_selection/"><button id="mockupusagereport" type="button" style="width:200px;height:100px;background-image: url(/media/images/beta.png);background-repeat: no-repeat;">Mock Usage Report</button></a>-->
 </a>
