--- a/uploadeXe/templates/myapp/new.html
+++ b/uploadeXe/templates/myapp/new.html
@@ -109,6 +109,10 @@
 				<input id="id_exefile" name="exefile" type="file" multiple>
 				
 			</p>
+		<h3>2. Choose a Thumbnail <i>(Optional)</i></h3>
+			<p>
+				<input id="id_thumbnail" name="thumbnail" type="file"></input>
+			</p>
 			<p><INPUT TYPE=CHECKBOX NAME="forceNew" ID="forceNew">Treat as a new upload<P>
 			<i>If you check this, the block you are about to upload will be treated as a new block and not an update</i>
 		        <!--<h3>2. Select Students Picklist</h3>
@@ -118,7 +122,7 @@
     				<select multiple="multiple" id="target" name="target">
     				</select>
 			</div>-->
-		        <h3>2. Add Block to Course:</h3>
+		        <h3>3. Add Block to Course:</h3>
         		<div id="assignedcourses" >
                 		<select multiple="multiple" id="source" name="source">
                 		</select>
@@ -130,7 +134,7 @@
         		    <label for="block_desc">Block Description: </label><input type="text" name="block_desc" id="block_desc" value="" />
 			</div>
 			<p></p>
-			<h3>3. Click Upload</h3>
+			<h3>4. Click Upload</h3>
 			<button id="submit" type="submit" name="submittotable" value="upload">Upload</button>
     			<button id="submit2" type="submit" name="submittonew" value="Create">Upload and Create another</button>
 			<img src="/media/images/address-book-new-3-medium.png" align="right">
